<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/extension">
        <EditTextPreference
            app:key="@string/key_extension"
            app:title="@string/ext"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/defValue"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/storage">

        <ListPreference
            app:defaultValue="@string/INTERN"
            app:entries="@array/guardar_entries"
            app:entryValues="@array/guardar_values"
            app:key="@string/key_almacenamiento"
            app:title="@string/guardar"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
